first implementation of the controllers, also wrote tests for playlist logic